fixed button spacing

--- a/main.css
+++ b/main.css
@@ -23,20 +23,21 @@ h1 {
 .carousel-container {
   display: inline-flex;
   width: 100%;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
 input {
   width: 95%;
-  font-size: 12px;
+  font-size: 11px;
+  font-weight: bold;
   text-align: center;
   background-color: hotpink;
   color: #ffb90f;
 }
 
 .carousel-images {
-  width: 50%;
+  width:85%;
   border: 4px solid hotpink;
   border-radius: 20px;
   padding: 10px;
@@ -58,7 +59,13 @@ input {
   border-radius: 50px;
   padding: 10px;
   border: 4px solid hotpink;
-  
 }
+
+.carousel-button {
+  text-align: center;
+  align-self: center;
+}
+
+
 
 /* Rupaul API CSS  */
